app/css/gym_rides.scss
.gym-rides {
  h3 {
    color: $black;
    padding-left: rem-calc(40px);
    background-repeat: no-repeat;
    background-size: 16px;
    background-position: left center;
    background-position-x: rem-calc(12px);
    background-image: url('/img/location.svg');
  }
  ul {
    list-style-type: none;
    margin: 0px;
  }
  li {
    line-height: rem-calc(50px);
    max-height: rem-calc(50px);
    overflow: hidden;
    background-color: $grey_light;
    margin-bottom: rem-calc(10px);
    vertical-align: middle;
    .icon {
      padding-left: rem-calc(40px);
      background-repeat: no-repeat;
      background-size: 16px;
      background-position: left center;
      background-position-x: rem-calc(12px);
      background-image: url('/img/synced.svg');
    }
    .right {
      padding-right: rem-calc(10px);
    }
  }
  .syncing {
    background-color: $green;
    .icon {
      -webkit-animation-duration: 1.3s;
      -moz-animation-duration: 1.3s;
      animation-duration: 1.3s;
      -webkit-animation-iteration-count: infinite;
      -moz-animation-iteration-count: infinite;
      animation-iteration-count: infinite;
      -webkit-animation-name: rotate-forever;
      -moz-animation-name: rotate-forever;
      animation-name: rotate-forever;
      -webkit-animation-timing-function: linear;
      -moz-animation-timing-function: linear;
      animation-timing-function: linear;
      background-image: url('/img/syncing.svg');
    }
  }
  .removed {
    .icon,
    .name {
      opacity: 0.5;
      text-decoration: line-through;
    }
  }
  .remove {
    font-size: smaller;
  }
  .time {
    overflow: hidden;
    font-size: x-small;
    font-style: italic;
  }
}

